# eXact-Number

./: .clang-format  CMakeLists.txt
app/: main.cpp
include/: Core.hpp  Matrix.hpp  Number.cpp  Number.hpp  Random.hpp  StringUtils.hpp  xnumpch.hpp
src/: Matrix.cpp  Number.cpp  Random.cpp  StringUtils.cpp
tests/: StringUtilsTests.cpp  XNumberTests.cpp
